--- a/main.html
+++ b/main.html
@@ -1034,7 +1034,7 @@
     <h2 class="big-cta-title">GET IT <span>FREE</span></h2>
     <p class="big-cta-sub">No registration. No limits on core features. Just download and play.</p>
 
-    <a href="#" class="download-btn-big" id="bigDownloadBtn">
+    <a href="youtube.com" class="download-btn-big" id="bigDownloadBtn">
       <span class="download-icon">⬇</span>
       Download Free v2.11.1
     </a>
